Criaçao de textos e Btn

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CARMAX</title>
-    <link rel="stylesheet" href="/login-page-trabalho/css/estilos.css">
+    <link rel="stylesheet" href="/css/estilos.css">
     <link href="https://ionic.io/ionicons">
 </head>
 <body>
     <main class="fundo"> <!-- BACKGROUND-->
         <header class="header">
             <div class="logo-links">
-                <img class="carmax-logo" src="/login-page-trabalho/imagens/carmax_logo_option_2.png" alt="n" width="120px">
+                <img class="carmax-logo" src="/imagens/carmax_logo_option_2.png" alt="n" width="120px">
                 <a class="a-links" href="#">Shop</a>
                 <a class="a-links" href="#">Sell/Trade</a>
                 <a class="a-links" href="#">Finance</a>
@@ -35,12 +35,23 @@
             <a href="#"><ion-icon id="lupa" name="search"></ion-icon></a>
             <input type="search" id="search1" placeholder="Search by make, model, or keyword">
         </div>
-        <!--CORPO/CONTEUDO-PRINCIPAL-->
-        <section>
-            <!--QUEM FOR FZR -BOTA O NOME AKI- -->
-        </section>
+        <br>
+        <br>
+        <br>
+
+        <div class="content-tex">
+        <h1> Love Your Car <br>Guarantee <span id="simbolo-r">&reg;</span></h1>
+        <span id="text-simb">Take 30 days to love it or return it (up to 1500 mi) <a href="#" id="information-circle-outline"><ion-icon name="information-circle-outline"></ion-icon>
+        </a></span>
+        <br>
+        <br>
+        <br>
+        <a id="btn-car" href="#">Search Cars</a>
+        </div>
+        
     </main>
     <!-- CODIGO DOS ICONS, USEM https://ionic.io/ionicons SITE DE ICONES -->
     <script  type = "module"  src = "https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" > </script>
+
 </body>
 </html>
