Edição feita pelo professor

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CARMAX</title>
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <link href="https://ionic.io/ionicons">
 </head>
 <body>
     <main class="fundo"> <!-- BACKGROUND-->
         <header class="header">
             <div class="logo-links">
-                <img class="carmax-logo" src="/imagens/carmax_logo_option_2.png" alt="n" width="120px">
+                <img class="carmax-logo" src="imagens/carmax_logo_option_2.png" alt="n" width="120px">
                 <a class="a-links" href="#">Shop</a>
                 <a class="a-links" href="#">Sell/Trade</a>
                 <a class="a-links" href="#">Finance</a>
@@ -32,8 +32,8 @@
             </div>
         </header>
         <div class="input-search"> <!--INPUTS-->
-            <a href="#"><ion-icon id="lupa" name="search"></ion-icon></a>
             <input type="search" id="search1" placeholder="Search by make, model, or keyword">
+            <a class="icone" href="#"><ion-icon id="lupa" name="search"></ion-icon></a>
         </div>
         <br>
         <br>
