--- a/index.html
+++ b/index.html
@@ -40,15 +40,16 @@
         <br>
 
         <div class="content-tex">
-        <h1> Love Your Car <br>Guarantee <span id="simbolo-r">&reg;</span></h1>
+        <h1 id="subtitle1"> Love Your Car <br>Guarantee <span id="simbolo-r">&reg;</span></h1>
         <span id="text-simb">Take 30 days to love it or return it (up to 1500 mi) <a href="#" id="information-circle-outline"><ion-icon name="information-circle-outline"></ion-icon>
-        </a></span>
+        </a></span> 
         <br>
         <br>
         <br>
         <a id="btn-car" href="#">Search Cars</a>
-        </div>
-        
+        </div>    
+        <a href="#"><img id="img-feed" src="/login-page-trabalho/imagens/Captura de tela 2023-03-20 094557.jpg" ></a>
+        <a id="msg-icon" href="#"><img src="/login-page-trabalho/imagens/msg-icon.jpg" alt=""></a>
     </main>
     <!-- CODIGO DOS ICONS, USEM https://ionic.io/ionicons SITE DE ICONES -->
     <script  type = "module"  src = "https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" > </script>
