--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>CARMAX</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link href="https://ionic.io/ionicons">
+
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+
+
 </head>
 <body>
     <main class="fundo"> <!-- BACKGROUND-->
@@ -51,8 +56,12 @@
         <a href="#"><img id="img-feed" src="/login-page-trabalho/imagens/Captura de tela 2023-03-20 094557.jpg" ></a>
         <a id="msg-icon" href="#"><img src="/login-page-trabalho/imagens/msg-icon.jpg" alt=""></a>
     </main>
+    
+    
     <!-- CODIGO DOS ICONS, USEM https://ionic.io/ionicons SITE DE ICONES -->
     <script  type = "module"  src = "https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" > </script>
-
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
 </body>
 </html>
