Problemas nas imagens

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <br>
         <a id="btn-car" href="#">Search Cars</a>
         </div>    
-        <a href="#"><img id="img-feed" src="/login-page-trabalho/imagens/Captura de tela 2023-03-20 094557.jpg" ></a>
-        <a id="msg-icon" href="#"><img src="/login-page-trabalho/imagens/msg-icon.jpg" alt=""></a>
+        <a href="#"><img id="img-feed" src="imagens/Captura de tela 2023-03-20 094557.jpg" ></a>
+        <a id="msg-icon" href="#"><img src="imagens/msg-icon.jpg" alt=""></a>
         <!-- Section 2 -->
         <br>
         <br>
