imagens fixas a tela de rolagem

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <title>CARMAX</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link href="https://ionic.io/ionicons">
-
+    <script src="js/script.js"></script>
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 
 
 </head>
 <body>
+    <a href="#"><img id="img-feed" src="imagens/Captura de tela 2023-03-20 094557.jpg" ></a>
+    <a id="msg-icon" href="#"><img src="imagens/msg-icon.jpg" alt=""></a>
     <main class="fundo"> <!-- BACKGROUND-->
         <header class="header">
             <div class="logo-links">
@@ -53,8 +55,6 @@
         <br>
         <a id="btn-car" href="#">Search Cars</a>
         </div>    
-        <a href="#"><img id="img-feed" src="imagens/Captura de tela 2023-03-20 094557.jpg" ></a>
-        <a id="msg-icon" href="#"><img src="imagens/msg-icon.jpg" alt=""></a>
         <!-- Section 2 -->
         <br>
         <br>
